fixed spacing between stats and rest of text content

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -144,7 +144,7 @@ body {
 		gap: 0.3rem;
 
 		@media screen and (min-width: $mediaMinWidth_desktop_sm) {
-			font-size: 0.85rem;
+			font-size: 1.1rem;
 		}
 
 		&__heading {
@@ -155,7 +155,7 @@ body {
 			text-transform: uppercase;
 
 			@media screen and (min-width: $mediaMinWidth_desktop_sm) {
-				font-size: 0.5rem;
+				font-size: 0.6rem;
 			}
 		}
 	}
